# pylint-forbid-import

./: .gitignore  LICENSE  Makefile  README.rst  azure-pipelines.yml  mypy.ini  pylintrc  pyproject.toml
pylint_forbid_import/: __init__.py
tests/: test_end_to_end.py  test_pylint_forbid_import.py  test_unit.py
