[tool.poetry]
name = "pylint_forbid_import"
version = "0.1.0"
description = ""
authors = ["Selim Belhaouane <selim.belhaouane@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
