[tool.poetry]
name = "pylint_forbid_import"
version = "0.1.0"
authors = ["Selim Belhaouane <selim.belhaouane@gmail.com>"]
description = ""
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/selimb/pylint-forbid-import"
repository = "https://github.com/selimb/pylint-forbid-import"
keywords = ["pylint", "dependency"]

[tool.poetry.dependencies]
python = ">=3.7"
pylint = ">=2.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = {version = "^18.3-alpha.0", allow-prereleases = true}
isort = "^4.3"
mypy = "^0.761.0"

[tool.isort]
known_first_party = "pylint_forbid_import"
no_lines_before = "LOCALFOLDER"
# black's recommended isort config
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
